[package]
name = "ratchet-pawl"
version = "0.1.0"
edition = "2021"

[profile.dev]
incremental = true

[build-dependencies]
build-my-react-js = "0.1.7"
inline_colorization = "0.1.6"

[dependencies]
libc = "0.2.169"
precis-profiles = "0.1.11"
rocket = { version = "0.5.1", features = ["json", "tls"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.133"
lazy_static = "1.5.0"
redb = "2.4.0"
pwhash = "1.0.0"
rand = "0.8.5"
fpe = "0.6.1"
aes = "0.8.4"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[lints.clippy]
cargo = { level = "warn", priority = -1 }
panic = "warn"
expect_used = "warn"
